--- a/README
+++ b/README
@@ -1,6 +1,24 @@
+****************************************************
+**********          INTRODUCCION          **********
+****************************************************
+
+Este trabajo o codigo realizado fue llevado a cabo por tres estudiantes de Ingenieria Mecatrónica de la 
+Unidad Profesional Interdisciplinaria en Ingeniería y Tecnologías Avanzadas del Instituto Politécnico Nacional 
+UPIITA-IPN.
+
+****************************************************
+**********             AUTORES            **********
+****************************************************
+
+Ing. Anguiano Torres Iván Adrián
+Ing. Garrido Reyes Miguel Daniel
+Ing. Martínez Loredo Jonathan Emmanuelle
+
 ARDRONE_TEST
 
-Instalación
+****************************************************
+**********          INSTALACIÓN           **********
+****************************************************
 
 $ roscd
 $ pwd
@@ -10,7 +28,12 @@ $ rospack profile
 $ roscd ARDroneIPN
 $ rosmake -a
 
-*Consideraciones
+En caso de presentarse algun error durante la ejecucion del rosmake, esto se debera principalmente
+a que el paque está direccionado a otro nombre, solo modifique de manera manual a la ruta de su equipo.
+
+****************************************************
+**********        CONSIDERACIONES         **********
+****************************************************
 
 Para poder hacer uso del paquete ardrone-test se debe de estar consciente que el algoritmo tiene algunas restric-
 ciones para llevar a cabo su funcionamiento de una manera eficiente, a continuación se enuncian las consideraciones
